streamlined exception management and fixed problem with cart exceptions. Closes #116. Closes #89

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -43,6 +43,8 @@ validation.numeric.generic=El número debe estar dentro del rango correcto
 validation.numeric.stock=The stock amount is out of range
 validation.numeric.pages=The pages amount is out of range
 
+http.error.400.message=The server cannot or will not process the request due to something that is perceived to be a client error (e.g., malformed request syntax, invalid request message framing, or deceptive request routing).
+http.error.400.title=Bad Request
 http.error.404.message=Sorry, we couldn't find the page you were looking for
 http.error.404.title=Page Not Found
 http.error.500.message=Sorry, some internal error occurred. We are working to fix it as soon as possible
