--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,8 +8,8 @@ auth.invalidToken=Token not valid
 auth.expiredToken=Token expired
 auth.badCredentials=Email or password are not correct
 auth.disabled=Sorry but there is some email problem. Please, check your email or try again
-auth.expired=User account has expired
-auth.locked=The user account has been locked for security reasons. Please, check your email
+auth.temporarilyLocked=The user account has been temporarily locked for security reasons. Please, check your email
+auth.locked=Sorry but there is some problem. Please, try again or contact us
 
 password.notMatching=Passwords doesn't match
 password.invalid=Password incorrect
