--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -33,7 +33,7 @@ array.overSize=Superado el máximo número de elementos permitido
 validation.generic=Please, correct the problems below and resubmit
 validation.regex.generic=Pattern not correct.
 validation.regex.text-query=Not allowed characters
-validation.regex.text-long=Este campo debe tener de 0 a 250 caracteres
+validation.regex.text-long=Invalid character/s in this field
 validation.regex.text-basic=This field must have zero to thirty characters between: middle hyphen (-), space, underscore (_), letters or numbers
 validation.regex.price=Not a valid price
 validation.regex.phone=Not a valid phone number
