refactored little single-message views into info.html

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,8 +3,8 @@ email.empty=Email is needed
 email.checkEmail=Please, check your email
 email.invalidFormat=Not a valid email format
 
-auth.invalidToken=Token not valid
-auth.expiredToken=Token expired
+auth.invalidToken=The provided token is not valid.
+auth.expiredToken=The provided token has expired.
 auth.badCredentials=Email or password are not correct
 auth.disabled=Sorry but there is some email problem. Please, check your email or try again
 auth.temporarilyLocked=The user account has been temporarily locked for security reasons. Please, check your email
@@ -42,11 +42,22 @@ validation.numeric.generic=El número debe estar dentro del rango correcto
 validation.numeric.stock=The stock amount is out of range
 validation.numeric.pages=The pages amount is out of range
 
-http.error.400.message=The server cannot or will not process the request due to something that is perceived to be a client error (e.g., malformed request syntax, invalid request message framing, or deceptive request routing).
 http.error.400.title=Bad Request
-http.error.404.message=Sorry, we couldn't find the page you were looking for
+http.error.400.message=The server cannot or will not process the request due to something that is perceived to be a client error (e.g., malformed request syntax, invalid request message framing, or deceptive request routing).
 http.error.404.title=Page Not Found
-http.error.500.message=Sorry, some internal error occurred. We are working to fix it as soon as possible
+http.error.404.message=Sorry, we couldn't find the page you were looking for
 http.error.500.title=Internal Server Error
-http.error.message=Sorry, some error occurred
+http.error.500.message=Sorry, some internal error occurred. We are working to fix it as soon as possible
 http.error.title=Error
+http.error.message=Sorry, some error occurred
+
+success.title=Congratulations!
+success.message=Your order has been successfully placed. Soon you'll receive a confirmation email.
+
+password.reset.title=Password Reset
+password.reset.message=You should have received an email with the reset password. We strongly recommend to replace the password provided with a new one.
+
+confirmEmail.title=Confirm Email
+confirmEmail.message.1=You should have received an email with a confirmation link. In order to complete the process, please click on it.
+confirmEmail.message.2=Remember to check your spam folder.
+confirmEmail.error.title=Email Confirmation Error
