-fixed decrementItem problem introduced in lasts commits -cart alert messages externalized

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -61,3 +61,6 @@ confirmEmail.title=Confirm Email
 confirmEmail.message.1=You should have received an email with a confirmation link. In order to complete the process, please click on it.
 confirmEmail.message.2=Remember to check your spam folder.
 confirmEmail.error.title=Email Confirmation Error
+
+cart.item.outOfStock=At the moment we do not have, in the quantity ordered, the below highlighted books. Please, to go on with your purchase decrease its quantity.
+cart.item.disabled=Book removed from cart due to unavailability:
