--- a/src/main/resources/messages_es_ES.properties
+++ b/src/main/resources/messages_es_ES.properties
@@ -15,3 +15,6 @@ isbn.error=El formato ó la suma de verificación (último dígito) no son corre
 isbn.notUnique=El ISBN ya existe!
 
 image.error=La imagen supera el tamaño máximo (128 KB), ó no es un fichero de imagen reconocido
+
+
+#cart.item.outOfStock=En estos momentos no disponemos -en la cantidad pedida- de los libros resaltados. Por favor, para continuar con la compra disminuya su cantidad
